--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -53,7 +53,7 @@
             android:paddingLeft="@dimen/vs_30"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="[ 1024 x 768 ]"
+            android:text="[ 0 X 0 ]"
             android:maxLines="1"/>
     </LinearLayout>
     <LinearLayout
