--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -134,7 +134,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/vs_5"
-                android:text="读取中"
+                android:text="读取"
                 android:singleLine="true"
                 android:layout_marginEnd="@dimen/vs_5"/>
             <TextView
