--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -5,6 +5,13 @@
     android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <LinearLayout
+        android:enabled="true"
+        android:id="@+id/xuamengMusic"
+        android:visibility="gone"
+        android:background="@drawable/xumusic"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"/>
     <xyz.doikki.videoplayer.player.VideoView
         android:id="@+id/mVideoView"
         android:layout_width="fill_parent"
@@ -933,4 +940,12 @@
         android:shadowRadius="2.0"
         android:digits=" 0123456789"
         android:inputType="number"/>
+    <ImageView
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:id="@+id/iv_circle_bg_xu"
+        android:padding="@dimen/vs_10"
+        android:layout_width="@dimen/vs_80"
+        android:layout_height="@dimen/vs_80"
+        android:src="@drawable/app_icon"/>
 </FrameLayout>
