--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -5,7 +5,13 @@
     android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    <LinearLayout
+        android:enabled="true"
+        android:id="@+id/xuamengMusic"
+        android:visibility="visible"
+        android:background="@drawable/xumusic"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"/>
     <xyz.doikki.videoplayer.player.VideoView
         android:id="@+id/mVideoView"
         android:layout_width="fill_parent"
@@ -936,17 +942,10 @@
         android:inputType="number"/>
     <ImageView
         android:layout_gravity="center"
-        android:visibility="gone"
+        android:visibility="visible"
         android:id="@+id/iv_circle_bg_xu"
         android:padding="@dimen/vs_10"
         android:layout_width="@dimen/vs_80"
         android:layout_height="@dimen/vs_80"
         android:src="@drawable/app_icon"/>
-    <LinearLayout
-        android:enabled="true"
-        android:id="@+id/xuamengMusic"
-
-        android:background="@drawable/xumusic"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
 </FrameLayout>
