--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -12,7 +12,7 @@
         android:clickable="true"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"/>
-    <LinearLayout
+    <ImageView
         android:enabled="true"
         android:id="@+id/xuamengMusic"
         android:visibility="gone"
