--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -14,6 +14,7 @@
         android:id="@+id/xuamengMusic"
         android:visibility="gone"
         android:background="@drawable/xumusic"
+		android:scaleType="fitXY" 
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"/>
     <LinearLayout
