--- a/app/src/main/res/layout/player_live_control_view.xml
+++ b/app/src/main/res/layout/player_live_control_view.xml
@@ -54,4 +54,13 @@
         android:indeterminateOnly="true"
         android:indeterminateDrawable="@drawable/anim_loading"
         android:indeterminateBehavior="repeat"/>
+    <ImageView
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:id="@+id/iv_circle_bg"
+		android:tag="music_iv_circle_bg"
+        android:padding="@dimen/vs_10"
+        android:layout_width="@dimen/vs_80"
+        android:layout_height="@dimen/vs_80"
+        android:src="@drawable/app_icon"/>
 </FrameLayout>
