--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -3,6 +3,7 @@
     android:id="@+id/live_root"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+	android:background="#ffffffff"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <ImageView
