--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -3,6 +3,7 @@
     android:id="@+id/rootView"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+	android:background="#ff000000"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
