--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -316,6 +316,7 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/previewPlayer"
         android:visibility="gone"
+		android:background="#ff000000"
         android:layout_width="@dimen/vs_470"
         android:layout_height="@dimen/vs_300"
         android:layout_marginLeft="@dimen/vs_50"
