--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1521,4 +1521,28 @@
         <item name="android:maxHeight">9mm</item>  
         <item name="android:indeterminateBehavior">cycle</item> 
     </style>  
+
+<!--xuameng文件选择器样式,在此只改变了背景和基本颜色-->
+    <style name="FileChooserXu" parent="FileChooserStyle">
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textColorPrimary">@color/colorPrimary</item>
+        <item name="android:textColorSecondary">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimary</item>
+        <item name="colorAccent">@color/material_deep_teal_200</item>
+        <item name="fileChooserDialogStyle">@style/FileChooserDialogStyle1</item>
+        <item name="fileChooserListItemStyle">@style/FileChooserListItemStyle1</item>
+        <item name="fileChooserPathViewStyle">@style/FileChooserPathViewStyle1</item>
+    </style>
+
+<!--选择器弹窗样式-->
+    <style name="FileChooserDialogStyle1" parent="FileChooserDialogStyle">
+        <item name="android:windowBackground">@drawable/shape_dialog_bg_main</item>
+        <item name="android:buttonBarButtonStyle">@style/FileChooserButtonStyle1</item>
+        <item name="buttonBarButtonStyle">@style/FileChooserButtonStyle1</item>
+    </style>
+    <style name="FileChooserButtonStyle1" parent="FileChooserButtonStyle">
+        <item name="android:textColor">@color/black</item>
+    </style>
+<!--    xuameng选择器弹窗样式结束-->
 </resources>
