--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -16,6 +16,7 @@
         android:layout_height="fill_parent"/>
     <xyz.doikki.videoplayer.player.VideoView
         android:id="@+id/mVideoView"
+		android:background="#ff000000"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"/>
     <ImageView
