--- a/app/src/main/res/layout/fragment_model.xml
+++ b/app/src/main/res/layout/fragment_model.xml
@@ -381,40 +381,86 @@
                         android:text=">"/>
                 </LinearLayout>
                 <LinearLayout
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:id="@+id/llMediaCodec"
-                    android:background="@drawable/shape_setting_model_focus"
-                    android:paddingLeft="@dimen/vs_20"
-                    android:paddingRight="@dimen/vs_20"
-                    android:focusable="true"
                     android:layout_width="@dimen/vs_0"
-                    android:layout_height="fill_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="@dimen/vs_5"
                     android:layout_marginLeft="@dimen/vs_5"
-                    android:layout_weight="1.0">
-                    <TextView
-                        android:textSize="@dimen/ts_24"
-                        android:textColor="@android:color/white"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="IJK 解码"/>
-                    <Space
-                        android:layout_width="0.0dip"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1.0"/>
-                    <TextView
-                        android:textSize="@dimen/ts_24"
-                        android:textColor="@android:color/white"
-                        android:id="@+id/tvMediaCodec"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                    <TextView
-                        android:textSize="@dimen/ts_30"
-                        android:textColor="@android:color/white"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/vs_10"
-                        android:text=">"/>
+                    android:layout_weight="1"
+                    android:focusable="false"
+                    android:orientation="horizontal">
+                    <LinearLayout
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:id="@+id/llMediaCodec"
+                        android:background="@drawable/shape_setting_model_focus"
+                        android:paddingLeft="@dimen/vs_20"
+                        android:paddingRight="@dimen/vs_20"
+                        android:focusable="true"
+                        android:layout_width="@dimen/vs_0"
+                        android:layout_height="fill_parent"
+                        android:layout_marginRight="@dimen/vs_5"
+                        android:layout_weight="1.0">
+                        <TextView
+                            android:textSize="@dimen/ts_24"
+                            android:textColor="@android:color/white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="IJK 解码"/>
+                        <Space
+                            android:layout_width="0.0dip"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1.0"/>
+                        <TextView
+                            android:textSize="@dimen/ts_24"
+                            android:textColor="@android:color/white"
+                            android:id="@+id/tvMediaCodec"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                        <TextView
+                            android:textSize="@dimen/ts_30"
+                            android:textColor="@android:color/white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/vs_10"
+                            android:text=">"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:id="@+id/llIjkCachePlay"
+                        android:background="@drawable/shape_setting_model_focus"
+                        android:paddingLeft="@dimen/vs_20"
+                        android:paddingRight="@dimen/vs_20"
+                        android:focusable="true"
+                        android:layout_width="@dimen/vs_0"
+                        android:layout_height="fill_parent"
+                        android:layout_marginLeft="@dimen/vs_5"
+                        android:layout_weight="1.0">
+                        <TextView
+                            android:textSize="@dimen/ts_24"
+                            android:textColor="@android:color/white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="IJK 缓存"/>
+                        <Space
+                            android:layout_width="0.0dip"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1.0"/>
+                        <TextView
+                            android:textSize="@dimen/ts_24"
+                            android:textColor="@android:color/white"
+                            android:id="@+id/tvIjkCachePlay"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="关闭"/>
+                        <TextView
+                            android:textSize="@dimen/ts_30"
+                            android:textColor="@android:color/white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/vs_10"
+                            android:text=">"/>
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
             <LinearLayout
@@ -460,41 +506,42 @@
                         android:text=">"/>
                 </LinearLayout>
                 <LinearLayout
+                    android:id="@+id/m3u8Ad"
+                    android:layout_width="@dimen/vs_0"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="@dimen/vs_5"
+                    android:layout_marginLeft="@dimen/vs_5"
+                    android:layout_weight="1"
+                    android:background="@drawable/shape_setting_model_focus"
+                    android:focusable="true"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:id="@+id/llIjkCachePlay"
-                    android:background="@drawable/shape_setting_model_focus"
                     android:paddingLeft="@dimen/vs_20"
-                    android:paddingRight="@dimen/vs_20"
-                    android:focusable="true"
-                    android:layout_width="@dimen/vs_0"
-                    android:layout_height="fill_parent"
-                    android:layout_marginLeft="@dimen/vs_5"
-                    android:layout_weight="1.0">
+                    android:paddingRight="@dimen/vs_20">
                     <TextView
-                        android:textSize="@dimen/ts_24"
-                        android:textColor="@android:color/white"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="IJK 缓存"/>
+                        android:text="去 广 告"
+                        android:textColor="@android:color/white"
+                        android:textSize="@dimen/ts_24"/>
                     <Space
-                        android:layout_width="0.0dip"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1.0"/>
+                        android:layout_weight="1"/>
                     <TextView
-                        android:textSize="@dimen/ts_24"
-                        android:textColor="@android:color/white"
-                        android:id="@+id/tvIjkCachePlay"
+                        android:id="@+id/m3u8AdText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="关闭"/>
-                    <TextView
-                        android:textSize="@dimen/ts_30"
                         android:textColor="@android:color/white"
+                        android:textSize="@dimen/ts_24"/>
+                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/vs_10"
                         android:layout_marginLeft="@dimen/vs_10"
-                        android:text=">"/>
+                        android:text=">"
+                        android:textColor="@android:color/white"
+                        android:textSize="@dimen/ts_30"/>
                 </LinearLayout>
             </LinearLayout>
             <LinearLayout
