--- a/app/src/main/res/layout/fragment_model.xml
+++ b/app/src/main/res/layout/fragment_model.xml
@@ -521,7 +521,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="去 广 告"
+                        android:text="去除广告"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/ts_24"/>
                     <Space
