--- a/app/src/main/res/layout/fragment_model.xml
+++ b/app/src/main/res/layout/fragment_model.xml
@@ -185,43 +185,6 @@
                     <LinearLayout
                         android:gravity="center_vertical"
                         android:orientation="horizontal"
-                        android:id="@+id/llHomeRecStyle"
-                        android:background="@drawable/shape_setting_model_focus"
-                        android:paddingLeft="@dimen/vs_20"
-                        android:paddingRight="@dimen/vs_20"
-                        android:focusable="true"
-                        android:visibility="gone"
-                        android:layout_width="@dimen/vs_0"
-                        android:layout_height="fill_parent"
-                        android:layout_marginLeft="@dimen/vs_5"
-                        android:layout_weight="1.0">
-                        <TextView
-                            android:textSize="@dimen/ts_24"
-                            android:textColor="@android:color/white"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="首页多行"/>
-                        <Space
-                            android:layout_width="0.0dip"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1.0"/>
-                        <TextView
-                            android:textSize="@dimen/ts_24"
-                            android:textColor="@android:color/white"
-                            android:id="@+id/showRecStyleText"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                        <TextView
-                            android:textSize="@dimen/ts_30"
-                            android:textColor="@android:color/white"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/vs_10"
-                            android:text=">"/>
-                    </LinearLayout>
-                    <LinearLayout
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal"
                         android:id="@+id/llHomeLive"
                         android:background="@drawable/shape_setting_model_focus"
                         android:paddingLeft="@dimen/vs_20"
@@ -344,41 +307,85 @@
                 android:layout_height="@dimen/vs_60"
                 android:layout_marginBottom="@dimen/vs_10">
                 <LinearLayout
-                    android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:id="@+id/llPlay"
-                    android:background="@drawable/shape_setting_model_focus"
-                    android:paddingLeft="@dimen/vs_20"
-                    android:paddingRight="@dimen/vs_20"
-                    android:focusable="true"
+                    android:focusable="false"
                     android:layout_width="@dimen/vs_0"
                     android:layout_height="fill_parent"
                     android:layout_marginRight="@dimen/vs_5"
                     android:layout_weight="1.0">
-                    <TextView
-                        android:textSize="@dimen/ts_24"
-                        android:textColor="@android:color/white"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="播放器"
-                        android:letterSpacing="0.4"/>
-                    <Space
-                        android:layout_width="0.0dip"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1.0"/>
-                    <TextView
-                        android:textSize="@dimen/ts_24"
-                        android:textColor="@android:color/white"
-                        android:id="@+id/tvPlay"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                    <TextView
-                        android:textSize="@dimen/ts_30"
-                        android:textColor="@android:color/white"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/vs_10"
-                        android:text=">"/>
+                    <LinearLayout
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:id="@+id/llHomeRecStyle"
+                        android:background="@drawable/shape_setting_model_focus"
+                        android:paddingLeft="@dimen/vs_20"
+                        android:paddingRight="@dimen/vs_20"
+                        android:focusable="true"
+                        android:layout_width="@dimen/vs_0"
+                        android:layout_height="fill_parent"
+                        android:layout_marginRight="@dimen/vs_5"
+                        android:layout_weight="1.0">
+                        <TextView
+                            android:textSize="@dimen/ts_24"
+                            android:textColor="@android:color/white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="首页多行"/>
+                        <Space
+                            android:layout_width="0.0dip"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1.0"/>
+                        <TextView
+                            android:textSize="@dimen/ts_24"
+                            android:textColor="@android:color/white"
+                            android:id="@+id/showRecStyleText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                        <TextView
+                            android:textSize="@dimen/ts_30"
+                            android:textColor="@android:color/white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/vs_10"
+                            android:text=">"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:id="@+id/llPlay"
+                        android:background="@drawable/shape_setting_model_focus"
+                        android:paddingLeft="@dimen/vs_20"
+                        android:paddingRight="@dimen/vs_20"
+                        android:focusable="true"
+                        android:layout_width="@dimen/vs_0"
+                        android:layout_height="fill_parent"
+                        android:layout_marginLeft="@dimen/vs_5"
+                        android:layout_weight="1.0">
+                        <TextView
+                            android:textSize="@dimen/ts_24"
+                            android:textColor="@android:color/white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="播放器"
+                            android:letterSpacing="0.4"/>
+                        <Space
+                            android:layout_width="0.0dip"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1.0"/>
+                        <TextView
+                            android:textSize="@dimen/ts_24"
+                            android:textColor="@android:color/white"
+                            android:id="@+id/tvPlay"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                        <TextView
+                            android:textSize="@dimen/ts_30"
+                            android:textColor="@android:color/white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/vs_10"
+                            android:text=">"/>
+                    </LinearLayout>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="@dimen/vs_0"
