--- a/app/src/main/res/layout/item_user_hot_vod_xu.xml
+++ b/app/src/main/res/layout/item_user_hot_vod_xu.xml
@@ -8,7 +8,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <FrameLayout
         android:id="@+id/mItemFrame"
-        android:layout_width="@240mm"
+        android:layout_width="240mm"
         android:layout_height="291mm">
         <ImageView
             android:id="@+id/ivThumb"
