--- a/app/src/main/res/layout/fragment_model.xml
+++ b/app/src/main/res/layout/fragment_model.xml
@@ -376,6 +376,8 @@
                             android:textSize="@dimen/ts_24"
                             android:textColor="@android:color/white"
                             android:id="@+id/tvPlay"
+                            android:maxEms="4"
+                            android:singleLine="true"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"/>
                         <TextView
@@ -388,13 +390,13 @@
                     </LinearLayout>
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_width="@dimen/vs_0"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="@dimen/vs_5"
-                    android:layout_marginLeft="@dimen/vs_5"
-                    android:layout_weight="1"
+                    android:orientation="horizontal"
                     android:focusable="false"
-                    android:orientation="horizontal">
+                    android:layout_width="@dimen/vs_0"
+                    android:layout_height="fill_parent"
+                    android:layout_marginLeft="@dimen/vs_5"
+                    android:layout_weight="1.0"
+                    android:layout_marginStart="@dimen/vs_5">
                     <LinearLayout
                         android:gravity="center_vertical"
                         android:orientation="horizontal"
@@ -513,42 +515,42 @@
                         android:text=">"/>
                 </LinearLayout>
                 <LinearLayout
-                    android:id="@+id/m3u8Ad"
-                    android:layout_width="@dimen/vs_0"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="@dimen/vs_5"
-                    android:layout_marginLeft="@dimen/vs_5"
-                    android:layout_weight="1"
-                    android:background="@drawable/shape_setting_model_focus"
-                    android:focusable="true"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
+                    android:id="@+id/m3u8Ad"
+                    android:background="@drawable/shape_setting_model_focus"
                     android:paddingLeft="@dimen/vs_20"
-                    android:paddingRight="@dimen/vs_20">
+                    android:paddingRight="@dimen/vs_20"
+                    android:focusable="true"
+                    android:layout_width="@dimen/vs_0"
+                    android:layout_height="fill_parent"
+                    android:layout_marginLeft="@dimen/vs_5"
+                    android:layout_weight="1.0"
+                    android:layout_marginStart="@dimen/vs_5">
                     <TextView
+                        android:textSize="@dimen/ts_24"
+                        android:textColor="@android:color/white"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="去除广告"
-                        android:textColor="@android:color/white"
-                        android:textSize="@dimen/ts_24"/>
+                        android:text="去除广告"/>
                     <Space
-                        android:layout_width="0dp"
+                        android:layout_width="0.0dip"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"/>
+                        android:layout_weight="1.0"/>
                     <TextView
+                        android:textSize="@dimen/ts_24"
+                        android:textColor="@android:color/white"
                         android:id="@+id/m3u8AdText"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@android:color/white"
-                        android:textSize="@dimen/ts_24"/>
+                        android:layout_height="wrap_content"/>
                     <TextView
+                        android:textSize="@dimen/ts_30"
+                        android:textColor="@android:color/white"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/vs_10"
                         android:layout_marginLeft="@dimen/vs_10"
                         android:text=">"
-                        android:textColor="@android:color/white"
-                        android:textSize="@dimen/ts_30"/>
+                        android:layout_marginStart="@dimen/vs_10"/>
                 </LinearLayout>
             </LinearLayout>
             <LinearLayout
