--- a/app/src/main/res/layout/fragment_model.xml
+++ b/app/src/main/res/layout/fragment_model.xml
@@ -1005,11 +1005,17 @@
                             android:textColor="@android:color/white"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="关于我们"/>
+                            android:text="存储权限"/>
                         <Space
                             android:layout_width="0.0dip"
                             android:layout_height="wrap_content"
                             android:layout_weight="1.0"/>
+                        <TextView
+                            android:textSize="@dimen/ts_24"
+                            android:textColor="@android:color/white"
+                            android:id="@+id/storage"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
                         <TextView
                             android:textSize="@dimen/ts_30"
                             android:textColor="@android:color/white"
