--- a/app/src/main/res/layout/dialog_api.xml
+++ b/app/src/main/res/layout/dialog_api.xml
@@ -43,7 +43,7 @@
                     android:textColor="@color/color_FFFFFF"
                     android:gravity="center"
                     android:layout_gravity="center"
-                    android:id="@+id/apiHistory"
+                    android:id="@+id/apiHistory_vod"
                     android:background="@drawable/button_dialog_main"
                     android:padding="@dimen/vs_10"
                     android:focusable="true"
@@ -53,7 +53,7 @@
                     android:text="历史点播源"
                     android:layout_weight="1.0"/>
                 <TextView
-                    android:id="@+id/apiHistory"
+                    android:id="@+id/apiHistory_live"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
